--- a/manager/templates/manager/dashboard.html
+++ b/manager/templates/manager/dashboard.html
@@ -16,6 +16,11 @@
         text-align: left;
         background-color: #000000;
     }
+    button{
+        width: 100px;
+        height: 35px;
+        margin-top: 20px;
+    }
 </style>
 <h1>Dashboard</h1>
 <div align="center">
@@ -37,5 +42,7 @@
         </tr>
         {%endfor%}
     </table>
+    <button>Upload</button>
+    <button>Download</button>
 </div>
 {%endblock%}
